# libcosimpy

./: .gitignore  README.md  conanfile.py  hatch_build.py  pyproject.toml
.github/workflows/: ci-main.yml
conan/: conanfile.py
src/libcosimpy/: CosimAlgorithm.py  CosimConstants.py  CosimEnums.py  CosimExecution.py  CosimLibrary.py  CosimLogging.py  CosimManipulator.py  CosimObserver.py  CosimSlave.py  Wrapper.py  __about__.py  _internal.py
tests/: conftest.py  test_ecco_algorithm.py  test_execution.py  test_execution_fixed_step_algorithm.py  test_execution_osp_config.py  test_execution_ssp_file.py  test_load_library.py  test_manipulator.py  test_observer.py
tests/data/dp-ship/scenarios/: faulty.json  movenorth.json
tests/data/fmi2/quarter_truck/: OspSystemStructure.xml
