[build-system]
requires = ["hatchling~=1.13"]
build-backend = "hatchling.build"

[project]
name = "libcosimpy"
dynamic = ["version"]
authors = [
    { name = "Magnus Steinstø", email = "magnus.steinsto@dnv.com" },
]
maintainers = [
    { name = "Hee Jong Park", email = "hee.jong.park@dnv.com"}
]
description = "Python wrapper for the libcosim library"
readme = "README.md"
requires-python = ">=3.10, <3.13"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux"
]

[project.urls]
"Homepage" = "https://github.com/open-simulation-platform/libcosimpy"

[dependency-groups]
dev = [
    "conan~=2.15.1",
    "ruff~=0.11.7",
    "hatchling~=1.13",
    "pyright>=1.1.400",
    "pytest>=8.3.5",
]

# Hatch configurations
[tool.hatch.version]
path = "src/libcosimpy/__about__.py"

[tool.hatch.build]
exclude = ["tests", ".github"]

[tool.hatch.build.targets.wheel.hooks.custom]
dependencies = [
    "conan~=2.15.1",
    "patchelf>=0.17.2; platform_system == 'Linux'"
]

[tool.hatch.build.targets.wheel.force-include]
"build/libcosimc" = "src/libcosimpy/libcosimc"

[tool.cibuildwheel.linux]
before-all = "yum install -y libatomic"

[tool.cibuildwheel]
build = "*-manylinux_x86_64 *-win_amd64"

[tool.pyright]
stubPath = "stubs"
include = [
    "src",
    "tests",
    "demos",
]
exclude = [
]
ignore = [
]

typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingParameterType = "error"
reportUnknownParameterType = "warning"
reportUnknownMemberType = false
reportMissingTypeArgument = "error"
reportPropertyTypeMismatch = "error"
reportFunctionMemberAccess = "warning"
reportPrivateUsage = "warning"
reportTypeCommentUsage = "warning"
reportIncompatibleMethodOverride = "warning"
reportIncompatibleVariableOverride = "error"
reportInconsistentConstructor = "error"
reportOverlappingOverload = "warning"
reportUninitializedInstanceVariable = "warning"
reportCallInDefaultInitializer = "warning"
reportUnnecessaryIsInstance = "information"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportUnusedCallResult = "warning"
reportUnusedExpression = "warning"
reportMatchNotExhaustive = "warning"
reportShadowedImports = "warning"
reportUntypedFunctionDecorator = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "warning"
reportUnnecessaryTypeIgnoreComment = "information"


